resources/styles/userInfo.css
body {
    background: #020247
}

#invisibleDiv{
    color: #020247;
    height: 100px;
}

.form-control:focus {
    box-shadow: none;
    border-color: #3131df
}

.profile-button {
    background: #002db3;
    box-shadow: none;
    border: none
}

.profile-button:hover {
    background: #3131df
}

.profile-button:focus {
    background: #3131df;
    box-shadow: none
}

.profile-button:active {
    background: #3131df;
    box-shadow: none
}

.back:hover {
    color: #682773;
    cursor: pointer
}

.labels {
    font-size: 11px
}

.add-reservation:hover {
    background: #3131df;
    color: white;
    cursor: pointer;
    border: solid 1px #7ea3de
}

.square-box-reservation{
    position: relative;
    width: 100%;
    overflow: hidden;
    background: white;
    border: lightgray;
    border-style:solid
}
.square-box-reservation:before{
    content: "";
    display: block;
    padding-top: 100%;
}
.square-content-reservation{
    position:  absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    color: black;
}
.square-content-reservation div {
   display: table;
   width: 100%;
   height: 100%;
}
.square-content-reservation span {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    color: black
}

select{
    width: 100%;
}

/*Dark mode */
.dark-mode {
    background-color: black;
    color: white;
  }

